# cpp

Kmeans_cluster/: init.sh
Kmeans_cluster/src/: main.cpp
VL53L1X_ultra_lite_driver/src/: main.c
assert_h/src/: main.c
boost/: operate.sh
boost/lib/: compile.sh
broadcast/: clean.sh
broadcast/resources/: broadcastclient.cpp  broadcastserver.cpp  multicastclient.cpp
call_dahua_sdk/src/: main.cpp
callback_fuc/src/: export.cpp  export.h  main.cpp
clog/src/: a.out  log.c  log.txt  main.c
common/build-build-Desktop_Qt_5_9_7_GCC_64bit-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  example  example.cbp
common/doc/: ReadFirst.md
common/src/: main.cpp
cpu_test/src/: a.out  main.cpp
ctype_h/src/: main.c
cuda_test/requireGPU/: testcpu.c  testcpu_mat.cpp  testcpu_mat_mul.cpp  testgpu.cu  testgpu_mat.cu  testgpu_mat_mul.cu
cuda_test/requireGPU/dir_test/: CMakeLists.txt
daemom/hello/: CMakeLists.txt  main.cpp  sayhello  util-debug.h  util-pidfile.c  util-pidfile.h
daemom/src/: main.cpp  main_bak.cpp  main_bak2.cpp
demo_autoconfig/: readme.md
demo_autoconfig/helloworld-0.1/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  helloworld  helloworld.c
designmode/: overall.md  uml.md  文件系统.md
errno_h/src/: main.c
example_with_gtest/: README.md
example_with_gtest/doc/: readme.md
example_with_gtest/gtest/: embedded.md  (+1 more)
example_with_gtest/gtest/test/: CMakeLists.txt  cookproc_test.cpp  example_subtract.cpp  node_test.cpp
example_with_gtest/src/example/: CMakeLists.txt  CookProc.h  example.cpp  example.h
executeAnotherExe/: operate.sh
glog_test/: operate.sh
httpmethod/: CMakeLists.txt  httpconnect.cpp  httpconnect.h  main.cpp
image_converter/: init.sh
img_proc/: init.sh
jpeg/: init.sh
msgmanage/: operate.sh
mysqlcpp/: init.sh
onvif/: main.cpp
portableImage/: init.sh
project_learning/: googletest-release-1.8.0.md  process.md
quickui/: quickui.qmlc  quickui.qmlproject
quickui_prototype/: quickui_prototype.qmlc  quickui_prototype.qmlproject
rawImage/: doc.dot  workspace.code-workspace
readAndSave/: init.sh  init_env.sh
test_gcov/: Makefile  main  main.c  main.gcda  main.gcno  main_test.info  readme.md  test.c  test.gcda  test.gcno
test_restclient/: CMakeLists.txt  main.cpp
thread/: testthread.cpp
thread_module/: thread_pool.cpp  thread_pool.hpp
web_server/: clean.sh
(+2670 files in other folders)
